# wireless-display

./: Cargo.toml  README.md  webrtc.html
src/: main.rs
src/client/: connect.rs  gui.rs  mod.rs  pair.rs  renderer.rs
src/server/: capture.rs  mod.rs  pair.rs  route.rs
src/shared/: connect.rs  mod.rs  renderer.rs
