[package]
name = "WirelessDisplay"
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/teamclouday/wireless-display"

[dependencies]
anyhow = "1.0.99"
tokio = { version = "1.47.1", features = ["full"] }

# cli interface
dialoguer = "0.12.0"
clap = { version = "4.5.47", features = ["derive"] }

# webrtc
webrtc = "0.13.0"
webrtc-util = "0.11.0"
base64 = "0.22.1"
warp = { version = "0.4.2", features = ["server"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
reqwest = { version = "0.12.23", features = ["json"] }

# screen capture
xcap = "0.7.0"
ffmpeg-next = { version = "8.0.0", features = ["default"] }

# mdns pairing
mdns-sd = "0.15.1"
flume = "0.11.1"

# GUI
winit = "0.30.12"
gl = "0.14.0"
glutin = "0.32.3"
